{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 193,
  "lineage": "5c2afa88-09e5-838d-1880-9e8cc885f7ba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "test-tgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-west-1:979559056307:transit-gateway/tgw-036562943bb45c77a",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "disable",
            "description": "Transit Gateway testing scenario with 4 VPCs, 2 subnets each",
            "dns_support": "enable",
            "id": "tgw-036562943bb45c77a",
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-tgw-demo",
              "scenario": "Dohoney"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw-dev-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-083c0cc54118b7942",
            "tags": {
              "Name": "Dohoney-tgw-dev-rt",
              "scenario": "Dohoney"
            },
            "transit_gateway_id": "tgw-036562943bb45c77a"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw-prod-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-07f83a9186ded41e1",
            "tags": {
              "Name": "Dohoney-tgw-prod-rt",
              "scenario": "Dohoney"
            },
            "transit_gateway_id": "tgw-036562943bb45c77a"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw-shared-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-09406b7c212852020",
            "tags": {
              "Name": "Dohoney-tgw-shared-rt",
              "scenario": "Dohoney"
            },
            "transit_gateway_id": "tgw-036562943bb45c77a"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgw-rt-vpc-1-assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-083c0cc54118b7942_tgw-attach-0f0140adf8f209d93",
            "resource_id": "vpc-0aba5cf2598286c7a",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0f0140adf8f209d93",
            "transit_gateway_route_table_id": "tgw-rtb-083c0cc54118b7942"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-dev-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgw-rt-vpc-2-assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-083c0cc54118b7942_tgw-attach-039c807bf4eb345ae",
            "resource_id": "vpc-0e757827493483ad8",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-039c807bf4eb345ae",
            "transit_gateway_route_table_id": "tgw-rtb-083c0cc54118b7942"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-dev-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgw-rt-vpc-3-assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-09406b7c212852020_tgw-attach-0ac4edb7023a69147",
            "resource_id": "vpc-09e7e9344429d5917",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0ac4edb7023a69147",
            "transit_gateway_route_table_id": "tgw-rtb-09406b7c212852020"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-shared-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgw-rt-vpc-4-assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-07f83a9186ded41e1_tgw-attach-057a463604faf71bd",
            "resource_id": "vpc-0f4fd01c05924f1dd",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-057a463604faf71bd",
            "transit_gateway_route_table_id": "tgw-rtb-07f83a9186ded41e1"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-prod-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "tgw-rt-dev-to-vpc-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-083c0cc54118b7942_tgw-attach-0f0140adf8f209d93",
            "resource_id": "vpc-0aba5cf2598286c7a",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0f0140adf8f209d93",
            "transit_gateway_route_table_id": "tgw-rtb-083c0cc54118b7942"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-dev-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "tgw-rt-dev-to-vpc-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-083c0cc54118b7942_tgw-attach-039c807bf4eb345ae",
            "resource_id": "vpc-0e757827493483ad8",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-039c807bf4eb345ae",
            "transit_gateway_route_table_id": "tgw-rtb-083c0cc54118b7942"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-dev-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "tgw-rt-dev-to-vpc-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-083c0cc54118b7942_tgw-attach-0ac4edb7023a69147",
            "resource_id": "vpc-09e7e9344429d5917",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0ac4edb7023a69147",
            "transit_gateway_route_table_id": "tgw-rtb-083c0cc54118b7942"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-dev-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "tgw-rt-prod-to-vpc-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-07f83a9186ded41e1_tgw-attach-0ac4edb7023a69147",
            "resource_id": "vpc-09e7e9344429d5917",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0ac4edb7023a69147",
            "transit_gateway_route_table_id": "tgw-rtb-07f83a9186ded41e1"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-prod-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "tgw-rt-shared-to-vpc-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-09406b7c212852020_tgw-attach-0f0140adf8f209d93",
            "resource_id": "vpc-0aba5cf2598286c7a",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0f0140adf8f209d93",
            "transit_gateway_route_table_id": "tgw-rtb-09406b7c212852020"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-shared-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "tgw-rt-shared-to-vpc-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-09406b7c212852020_tgw-attach-039c807bf4eb345ae",
            "resource_id": "vpc-0e757827493483ad8",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-039c807bf4eb345ae",
            "transit_gateway_route_table_id": "tgw-rtb-09406b7c212852020"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-shared-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "tgw-rt-shared-to-vpc-4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-09406b7c212852020_tgw-attach-057a463604faf71bd",
            "resource_id": "vpc-0f4fd01c05924f1dd",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-057a463604faf71bd",
            "transit_gateway_route_table_id": "tgw-rtb-09406b7c212852020"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-shared-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-att-vpc-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-0f0140adf8f209d93",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-01d0df87dbaf50da8",
              "subnet-054b07725914dbdeb"
            ],
            "tags": {
              "Name": "Dohoney-tgw-att-vpc1",
              "scenario": "Dohoney"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-036562943bb45c77a",
            "vpc_id": "vpc-0aba5cf2598286c7a",
            "vpc_owner_id": "979559056307"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw",
            "aws_subnet.vpc-1-sub-a",
            "aws_subnet.vpc-1-sub-b",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-att-vpc-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-039c807bf4eb345ae",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-08f70b6de3c32964a",
              "subnet-0b67f478fd4a61826"
            ],
            "tags": {
              "Name": "Dohoney-tgw-att-vpc2",
              "scenario": "Dohoney"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-036562943bb45c77a",
            "vpc_id": "vpc-0e757827493483ad8",
            "vpc_owner_id": "979559056307"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw",
            "aws_subnet.vpc-2-sub-a",
            "aws_subnet.vpc-2-sub-b",
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-att-vpc-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-0ac4edb7023a69147",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-057348086a45c2a2e",
              "subnet-0fd663775738f5592"
            ],
            "tags": {
              "Name": "Dohoney-tgw-att-vpc3",
              "scenario": "Dohoney"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-036562943bb45c77a",
            "vpc_id": "vpc-09e7e9344429d5917",
            "vpc_owner_id": "979559056307"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw",
            "aws_subnet.vpc-3-sub-a",
            "aws_subnet.vpc-3-sub-b",
            "aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-att-vpc-4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-057a463604faf71bd",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-039c149f4543a2292",
              "subnet-06ba050371007b2f1"
            ],
            "tags": {
              "Name": "Dohoney-tgw-att-vpc4",
              "scenario": "Dohoney"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-036562943bb45c77a",
            "vpc_id": "vpc-0f4fd01c05924f1dd",
            "vpc_owner_id": "979559056307"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw",
            "aws_subnet.vpc-4-sub-a",
            "aws_subnet.vpc-4-sub-b",
            "aws_vpc.vpc-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-tgw-instance1-dev",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fcb09de99f2fc888",
            "arn": "arn:aws:ec2:us-west-1:979559056307:instance/i-02df429a4d1532643",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02df429a4d1532643",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-tgw-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08fecd49d209b0cf4",
            "private_dns": "ip-10-10-1-10.us-west-1.compute.internal",
            "private_ip": "10.10.1.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d3e8b3c345e2011e",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054b07725914dbdeb",
            "tags": {
              "Name": "Dohoney-test-tgw-instance1-dev",
              "az": "us-west-1b",
              "env": "dev",
              "scenario": "Dohoney",
              "vpc": "1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04b787960e33fe4a3"
            ]
          },
          "depends_on": [
            "aws_key_pair.test-tgw-keypair",
            "aws_security_group.sec-group-vpc-1-ssh-icmp",
            "aws_subnet.vpc-1-sub-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-tgw-instance2-dev",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fcb09de99f2fc888",
            "arn": "arn:aws:ec2:us-west-1:979559056307:instance/i-04d59c16134c445ad",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d59c16134c445ad",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-tgw-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-045706c9504a66c33",
            "private_dns": "ip-10-11-1-10.us-west-1.compute.internal",
            "private_ip": "10.11.1.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09b4fcfb8245b2a3d",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f70b6de3c32964a",
            "tags": {
              "Name": "Dohoney-test-tgw-instance2-dev",
              "az": "us-west-1b",
              "env": "dev",
              "scenario": "Dohoney",
              "vpc": "2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0460095df5611888f"
            ]
          },
          "depends_on": [
            "aws_key_pair.test-tgw-keypair",
            "aws_security_group.sec-group-vpc-2-ssh-icmp",
            "aws_subnet.vpc-2-sub-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-tgw-instance3-shared",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fcb09de99f2fc888",
            "arn": "arn:aws:ec2:us-west-1:979559056307:instance/i-0a4c25e6922406a98",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4c25e6922406a98",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-tgw-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0345646750f198ae2",
            "private_dns": "ip-10-12-1-10.us-west-1.compute.internal",
            "private_ip": "10.12.1.10",
            "public_ip": "54.215.243.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01dc4c54758ff8489",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057348086a45c2a2e",
            "tags": {
              "Name": "Dohoney-test-tgw-instance3-shared",
              "az": "us-west-1b",
              "env": "shared",
              "scenario": "Dohoney",
              "vpc": "3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04eaffe99e7fd59b0"
            ]
          },
          "depends_on": [
            "aws_key_pair.test-tgw-keypair",
            "aws_security_group.sec-group-vpc-3-ssh-icmp",
            "aws_subnet.vpc-3-sub-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-tgw-instance4-prod",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fcb09de99f2fc888",
            "arn": "arn:aws:ec2:us-west-1:979559056307:instance/i-096696d6738ef8d1c",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-096696d6738ef8d1c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-tgw-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-040ffaec657299a3b",
            "private_dns": "ip-10-13-1-10.us-west-1.compute.internal",
            "private_ip": "10.13.1.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02e8ae1eced7cec60",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ba050371007b2f1",
            "tags": {
              "Name": "Dohoney-test-tgw-instance4-prod",
              "az": "us-west-1b",
              "env": "prod",
              "scenario": "Dohoney",
              "vpc": "4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b11238853e8c19b5"
            ]
          },
          "depends_on": [
            "aws_key_pair.test-tgw-keypair",
            "aws_security_group.sec-group-vpc-4-ssh-icmp",
            "aws_subnet.vpc-4-sub-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-3-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0707b62c7cda6b716",
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc-3-igw",
              "scenario": "Dohoney"
            },
            "vpc_id": "vpc-09e7e9344429d5917"
          },
          "depends_on": [
            "aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main-rt-vpc-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07822bf4f77e831fe",
            "original_route_table_id": "rtb-09aea3c3ca557e85b",
            "route_table_id": "rtb-0bc2d4ab887bb0982",
            "vpc_id": "vpc-0aba5cf2598286c7a"
          },
          "depends_on": [
            "aws_route_table.vpc-1-rtb",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main-rt-vpc-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c498690eec77ba61",
            "original_route_table_id": "rtb-05d2deac5ccc8ee5c",
            "route_table_id": "rtb-05adbd858dbe34dff",
            "vpc_id": "vpc-0e757827493483ad8"
          },
          "depends_on": [
            "aws_route_table.vpc-2-rtb",
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main-rt-vpc-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f903b88c2141bcf",
            "original_route_table_id": "rtb-01dd2e8b1b5ad408a",
            "route_table_id": "rtb-0251ce6aa28b9cbf1",
            "vpc_id": "vpc-09e7e9344429d5917"
          },
          "depends_on": [
            "aws_route_table.vpc-3-rtb",
            "aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main-rt-vpc-4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07625cbdaf59fe6e9",
            "original_route_table_id": "rtb-09d6dabd7d93e5ab1",
            "route_table_id": "rtb-017784c1c7a4b3653",
            "vpc_id": "vpc-0f4fd01c05924f1dd"
          },
          "depends_on": [
            "aws_route_table.vpc-4-rtb",
            "aws_vpc.vpc-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-1-rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bc2d4ab887bb0982",
            "owner_id": "979559056307",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "10.0.0.0/8",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-036562943bb45c77a",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dohoney-vpc-1-rtb",
              "env": "dev",
              "scenario": "Dohoney"
            },
            "vpc_id": "vpc-0aba5cf2598286c7a"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-2-rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05adbd858dbe34dff",
            "owner_id": "979559056307",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "10.0.0.0/8",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-036562943bb45c77a",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dohoney-vpc-2-rtb",
              "env": "dev",
              "scenario": "Dohoney"
            },
            "vpc_id": "vpc-0e757827493483ad8"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw",
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-3-rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0251ce6aa28b9cbf1",
            "owner_id": "979559056307",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0707b62c7cda6b716",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.0.0/8",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-036562943bb45c77a",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dohoney-vpc-3-rtb",
              "env": "shared",
              "scenario": "Dohoney"
            },
            "vpc_id": "vpc-09e7e9344429d5917"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw",
            "aws_internet_gateway.vpc-3-igw",
            "aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-4-rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-017784c1c7a4b3653",
            "owner_id": "979559056307",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "10.0.0.0/8",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-036562943bb45c77a",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dohoney-vpc-4-rtb",
              "env": "prod",
              "scenario": "Dohoney"
            },
            "vpc_id": "vpc-0f4fd01c05924f1dd"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw",
            "aws_vpc.vpc-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec-group-vpc-1-ssh-icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:security-group/sg-04b787960e33fe4a3",
            "description": "test-tgw: Allow SSH and ICMP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b787960e33fe4a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Dohoney-sec-group-vpc-1-ssh-icmp",
            "name_prefix": null,
            "owner_id": "979559056307",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec-group-vpc-1-ssh-icmp",
              "scenario": "Dohoney"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aba5cf2598286c7a"
          },
          "depends_on": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec-group-vpc-2-ssh-icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:security-group/sg-0460095df5611888f",
            "description": "test-tgw: Allow SSH and ICMP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0460095df5611888f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Dohoney-sec-group-vpc-2-ssh-icmp",
            "name_prefix": null,
            "owner_id": "979559056307",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec-group-vpc-2-ssh-icmp",
              "scenario": "Dohoney"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e757827493483ad8"
          },
          "depends_on": [
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec-group-vpc-3-ssh-icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:security-group/sg-04eaffe99e7fd59b0",
            "description": "test-tgw: Allow SSH and ICMP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04eaffe99e7fd59b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Dohoney-sec-group-vpc-3-ssh-icmp",
            "name_prefix": null,
            "owner_id": "979559056307",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec-group-vpc-3-ssh-icmp",
              "scenario": "Dohoney"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e7e9344429d5917"
          },
          "depends_on": [
            "aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec-group-vpc-4-ssh-icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:security-group/sg-0b11238853e8c19b5",
            "description": "test-tgw: Allow SSH and ICMP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b11238853e8c19b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Dohoney-sec-group-vpc-4-ssh-icmp",
            "name_prefix": null,
            "owner_id": "979559056307",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Dohoney-sec-group-vpc-4-ssh-icmp",
              "scenario": "Dohoney"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4fd01c05924f1dd"
          },
          "depends_on": [
            "aws_vpc.vpc-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-1-sub-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:subnet/subnet-054b07725914dbdeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-054b07725914dbdeb",
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc1-dev-sub-a"
            },
            "vpc_id": "vpc-0aba5cf2598286c7a"
          },
          "depends_on": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-1-sub-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:subnet/subnet-01d0df87dbaf50da8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-01d0df87dbaf50da8",
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc1-dev-sub-b"
            },
            "vpc_id": "vpc-0aba5cf2598286c7a"
          },
          "depends_on": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-2-sub-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:subnet/subnet-08f70b6de3c32964a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.11.1.0/24",
            "id": "subnet-08f70b6de3c32964a",
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc2-dev-sub-a"
            },
            "vpc_id": "vpc-0e757827493483ad8"
          },
          "depends_on": [
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-2-sub-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:subnet/subnet-0b67f478fd4a61826",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.11.2.0/24",
            "id": "subnet-0b67f478fd4a61826",
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc2-dev-sub-b"
            },
            "vpc_id": "vpc-0e757827493483ad8"
          },
          "depends_on": [
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-3-sub-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:subnet/subnet-057348086a45c2a2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.12.1.0/24",
            "id": "subnet-057348086a45c2a2e",
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc3-shared-sub-a"
            },
            "vpc_id": "vpc-09e7e9344429d5917"
          },
          "depends_on": [
            "aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-3-sub-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:subnet/subnet-0fd663775738f5592",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.12.2.0/24",
            "id": "subnet-0fd663775738f5592",
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc3-shared-sub-b"
            },
            "vpc_id": "vpc-09e7e9344429d5917"
          },
          "depends_on": [
            "aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-4-sub-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:subnet/subnet-06ba050371007b2f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.13.1.0/24",
            "id": "subnet-06ba050371007b2f1",
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc4-prod-sub-a"
            },
            "vpc_id": "vpc-0f4fd01c05924f1dd"
          },
          "depends_on": [
            "aws_vpc.vpc-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-4-sub-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:subnet/subnet-039c149f4543a2292",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.13.2.0/24",
            "id": "subnet-039c149f4543a2292",
            "map_public_ip_on_launch": false,
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc4-prod-sub-b"
            },
            "vpc_id": "vpc-0f4fd01c05924f1dd"
          },
          "depends_on": [
            "aws_vpc.vpc-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:vpc/vpc-0aba5cf2598286c7a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-03218754e62c0ff6a",
            "default_route_table_id": "rtb-09aea3c3ca557e85b",
            "default_security_group_id": "sg-0f3ac4fea8a690353",
            "dhcp_options_id": "dopt-5778cc32",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0aba5cf2598286c7a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09aea3c3ca557e85b",
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc1-dev",
              "env": "dev",
              "scenario": "Dohoney"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:vpc/vpc-0e757827493483ad8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-06da1e0b1e8bd1803",
            "default_route_table_id": "rtb-05d2deac5ccc8ee5c",
            "default_security_group_id": "sg-073e21f94e6725955",
            "dhcp_options_id": "dopt-5778cc32",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e757827493483ad8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05d2deac5ccc8ee5c",
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc2-dev",
              "env": "dev",
              "scenario": "Dohoney"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:vpc/vpc-09e7e9344429d5917",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.12.0.0/16",
            "default_network_acl_id": "acl-0118dcb3e941b2359",
            "default_route_table_id": "rtb-01dd2e8b1b5ad408a",
            "default_security_group_id": "sg-030ba0da27dd91524",
            "dhcp_options_id": "dopt-5778cc32",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09e7e9344429d5917",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01dd2e8b1b5ad408a",
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc3-shared",
              "env": "shared",
              "scenario": "Dohoney"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:979559056307:vpc/vpc-0f4fd01c05924f1dd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.13.0.0/16",
            "default_network_acl_id": "acl-05898a23d98e7230b",
            "default_route_table_id": "rtb-09d6dabd7d93e5ab1",
            "default_security_group_id": "sg-0fbb2404896290fca",
            "dhcp_options_id": "dopt-5778cc32",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f4fd01c05924f1dd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09d6dabd7d93e5ab1",
            "owner_id": "979559056307",
            "tags": {
              "Name": "Dohoney-vpc4-prod",
              "env": "prod",
              "scenario": "Dohoney"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "atlas_service",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-0c77d732ad67cb04b-nhgbs2m4.vpce-svc-07ef8183eb905efa3.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-0c77d732ad67cb04b-nhgbs2m4-us-west-1b.vpce-svc-07ef8183eb905efa3.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              }
            ],
            "id": "vpce-0c77d732ad67cb04b",
            "network_interface_ids": [
              "eni-0f65c41539a862b68"
            ],
            "owner_id": "979559056307",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b11238853e8c19b5"
            ],
            "service_name": "com.amazonaws.vpce.us-west-1.vpce-svc-07ef8183eb905efa3",
            "state": "pendingAcceptance",
            "subnet_ids": [
              "subnet-06ba050371007b2f1"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f4fd01c05924f1dd"
          },
          "depends_on": [
            "aws_security_group.sec-group-vpc-4-ssh-icmp",
            "aws_subnet.vpc-4-sub-a",
            "aws_vpc.vpc-4",
            "mongodbatlas_private_endpoint.privateLink"
          ]
        }
      ]
    }
  ]
}